kubernetes/apps/base/observability/kube-prometheus-stack/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: observability
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network-system
      sectionName: https
  hostnames:
    - 'alertmanager.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: alertmanager-operated
          port: 9093
          weight: 100
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: observability
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: https
    - name: envoy-internal
      namespace: network-system
      sectionName: https
  hostnames:
    - 'prometheus.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
          weight: 100
